# nrcan-landcover

./: CHANGELOG.md  LICENSE  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  Dockerfile-dev  Dockerfile-script-runner  build  cibuild  console  docs-server  format  notebook  run-script  stac  test
docs/: conf.py  index.rst  installation_and_basic_usage.ipynb
examples/: collection.json  example2015_cog.json  example2015_cog_extent.geojson
scripts/: lint
src/stactools/nrcan_landcover/: __init__.py  cog.py  commands.py  constants.py  extent.py  stac.py  utils.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: example2015.tif
