[metadata]
name = stactools-nrcan-landcover
version = attr: stactools.nrcan_landcover.__version__
description = Collection of Land Cover products for Canada as produced by NRCan
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/stactools-nrcan-landcover
project_urls =
    Documentation = https://stactools-package.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/stactools-nrcan-landcover/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools ~= 0.2.1a1

[options.packages.find]
where = src
